--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.2",
