--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.2",
