--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "setup-project": "npm i && cd .. && cd client && npm i",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "cd .. && cd client && npm run dev",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
