--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.0.3",
