--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.5.1",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
