--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.1",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
