--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "setup-project": "npm i && cd .. && cd client && npm i",
+    "setup-production-app": "npm i && cd .. && cd client && npm i && npm run build",
     "server": "nodemon server.js",
     "client": "cd .. && cd client && npm run dev",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
