--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.5.1",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
+    "datauri": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
