--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "setup-project": "npm i && cd .. && cd client && npm i",
-    "setup-production-app": "npm i && cd .. && cd client && npm i && npm run build",
-    "server": "nodemon server.js",
-    "client": "cd .. && cd client && npm run dev",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "server": "tsx watch src/server.ts",
+    "client": "cd ../client && npm run dev",
+    "setup-project": "npm i && cd ../client && npm i",
+    "setup-production-app": "npm i && npm run build && cd ../client && npm i && npm run build",
+    "populate": "tsx src/populate.ts"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +36,17 @@
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "nanoid": "^5.0.9",
-    "nodemon": "^3.1.9"
+    "nanoid": "^5.0.9"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.10.5",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
