--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "server": "tsx watch src/server.ts",
     "client": "cd ../client && npm run dev",
     "setup-project": "npm i && cd ../client && npm i",
-    "setup-production-app": "npm i && npm run build && cd ../client && npm i && npm run build",
+    "setup-production-app": "npm run build && cd ../client && npm run build",
     "populate": "tsx src/populate.ts"
   },
   "keywords": [],
@@ -36,7 +36,8 @@
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -46,7 +47,6 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "tsx": "^4.19.2"
   }
 }
